--- a/app/css/style.css
+++ b/app/css/style.css
@@ -55,6 +55,8 @@ input[type="search"] {
 
 .cart {
   margin-top: 30px; }
+  .cart:hover {
+    cursor: pointer; }
 
 .cart-chip {
   background: url(../icons/cart.svg) no-repeat;
@@ -110,12 +112,13 @@ article {
   /* padding: 5px 10px 7px 10px; */
   line-height: 35px;
   margin-top: 20px;
-  min-width: 200px; }
-  .add-chip a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 13px; }
+  min-width: 200px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 13px; }
+  .add-chip:hover {
+    cursor: pointer; }
 
 .breweries {
   padding: 2rem; }
@@ -123,6 +126,82 @@ article {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 1rem; }
+
+.chip-open {
+  display: none;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); }
+  .chip-open .chip-body {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 1024px;
+    min-height: 200px;
+    max-height: 640px;
+    background-color: #fff;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    padding: 25px;
+    overflow: auto; }
+  .chip-open .chip-title {
+    font-size: 28px;
+    color: rgba(0, 0, 0, 0.4); }
+  .chip-open .wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    margin-top: 25px; }
+    .chip-open .wrapper .empty {
+      font-size: 24px;
+      color: rgba(0, 0, 0, 0.4); }
+    .chip-open .wrapper .cart-block {
+      margin-right: 75px; }
+  .chip-open .chip-close {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    cursor: pointer; }
+  .chip-open .chip-total {
+    font-size: 18px; }
+    .chip-open .chip-total span {
+      color: #DC3E2A; }
+  .chip-open .chip-confirm {
+    width: 280px;
+    height: 40px;
+    display: block;
+    margin: 0 auto;
+    background-color: #DC3E2A;
+    border: none;
+    outline: none;
+    margin-top: 20px;
+    color: #ffffff;
+    font-weight: 700;
+    cursor: pointer; }
+    .chip-open .chip-confirm:focus {
+      outline: none; }
+    .chip-open .chip-confirm:hover {
+      -webkit-box-shadow: 0 0 15px rgba(220, 62, 42, 0.7);
+              box-shadow: 0 0 15px rgba(220, 62, 42, 0.7); }
+
+.confirm {
+  display: none;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 100px;
+  height: 100px; }
+  .confirm img {
+    width: 100%; }
 
 @media screen and (max-width: 768px) {
   input[type="search"] {
