--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -61,6 +61,9 @@ input[type="search"] {
 
 .cart {
     margin-top: 30px;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .cart-chip {
@@ -124,11 +127,12 @@ article {
     line-height: 35px;
     margin-top: 20px;
     min-width: 200px;
-    a {
-        color: #fff;
-        text-decoration: none;
-        font-weight: 700;
-        font-size: 13px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 13px;
+    &:hover {
+        cursor: pointer;
     }
 }
 
@@ -141,6 +145,86 @@ article {
     }
 }
 
+.chip-open {
+    display: none;
+    box-shadow: 0 0 40px rgba(0,0,0,0.5);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0, .3);
+    .chip-body {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 1024px;
+        min-height: 200px;
+        max-height: 640px;
+        background-color: #fff;
+        transform: translateX(-50%) translateY(-50%);
+        padding: 25px;
+        overflow: auto;
+    }
+   .chip-title {
+        font-size: 28px;
+        color: rgba(0,0,0, .4);
+   } 
+   .wrapper {
+        display: flex; 
+        flex-wrap: wrap;
+        margin-top: 25px;
+        .empty {
+            font-size: 24px;
+            color: rgba(0,0,0, .4);
+        } 
+        .cart-block {
+            margin-right: 75px;
+        }
+   }
+    .chip-close {
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        cursor: pointer;
+    }
+    .chip-total {
+        font-size: 18px;
+        span {
+            color: #DC3E2A;
+        }
+    }
+    .chip-confirm {
+        width: 280px;
+        height: 40px;
+        display: block;
+        margin: 0 auto;
+        background-color: #DC3E2A;
+        border: none;
+        outline: none;
+        margin-top: 20px;
+        color: #ffffff;
+        font-weight: 700;
+        cursor: pointer; 
+        &:focus {
+            outline: none;
+        } 
+        &:hover {
+            box-shadow: 0 0 15px rgba(220, 62, 42, .7);
+        } 
+    }
+}
+
+.confirm {
+    display: none;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 100px;
+    height: 100px;
+    img {
+        width: 100%;
+    }
+}
 
 @media screen and (max-width: 768px) {
     input[type="search"] {
